# projeck-kernel

./: BUILD.bazel  Makefile  build.config.aarch64  build.config.common  build.config.qemu_trusty.aarch64  build.kernel  qemu_defconfig.fragment  trusty_defconfig.fragment
Documentation/admin-guide/: kernel-parameters.txt
Documentation/devicetree/bindings/cpufreq/: qemu,cpufreq-virtual.yaml
arch/arm64/configs/: gki_defconfig  qemu_defconfig.fragment  trusty_defconfig.fragment
arch/arm64/include/asm/: pgtable.h  stackprotector.h
arch/arm64/kernel/: Makefile  smp.c
arch/arm64/kvm/vgic/: vgic-kvm-device.c
arch/arm64/mm/: mteswap.c
arch/arm64/net/: bpf_jit_comp.c
block/: ioctl.c
drivers/: Kconfig  Makefile
drivers/acpi/: processor_idle.c  scan.c
drivers/android/: binder.c  vendor_hooks.c
drivers/base/: Makefile  core.c
drivers/base/regmap/: regmap.c
drivers/block/zram/: zcomp.c
drivers/clk/: clk.c
drivers/cpufreq/: Kconfig  Makefile  virtual-cpufreq.c
drivers/hwtracing/coresight/: coresight-etm4x-core.c  coresight-etm4x.h  coresight-stm.c
drivers/irqchip/: irq-gic-v3.c
drivers/pci/: Makefile  pci.c
drivers/pinctrl/mediatek/: pinctrl-paris.c
drivers/power/supply/: Makefile  Makefiley  power_supply_core.c  rt9455_charger.c
drivers/regulator/: mt6360-regulator.c
drivers/trusty/: trusty-ipc.c
drivers/tty/serial/: max310x.c
drivers/usb/gadget/: configfs.c
drivers/usb/gadget/function/: Makefile  uvc_video.c
drivers/usb/host/: xhci-ring.c
drivers/usb/serial/: visor.c
drivers/usb/typec/tcpm/: tcpm.c
fs/erofs/: decompressor.c
fs/f2fs/: Makefile  node.c
fs/nfs/: inode.c
include/linux/: blkdev.h  bpf.h  filter.h  hugetlb.h  igmp.h  interrupt.h  mroute.h
include/trace/hooks/: mm.h
include/uapi/linux/: virtio_ids.h
init/: Kconfig
kernel/: softirq.c  sys.c
kernel/bpf/: arraymap.c  cpumap.c  devmap.c  hashtab.c  helpers.c  map_in_map.c  stackmap.c  syscall.c
kernel/events/: core.c
kernel/rcu/: Kconfig  tree.c  update.c
kernel/sched/: rt.c
kernel/time/: clocksource.c  hrtimer.c  timer.c
kernel/trace/: ring_buffer.c
mm/: memory.c  page_alloc.c
net/batman-adv/: distributed-arp-table.c  main.c
net/core/: sock.c
net/ipv4/: igmp.c  ip_sockglue.c  route.c  udp_offload.c
net/ipv6/: ip6_tunnel.c
net/tipc/: msg.c
net/unix/: Makefile  scm.c
net/wireless/: scan.c
tools/testing/selftests/seccomp/: seccomp_bpf.c
